--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -22,3 +22,16 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Ignorar arquivos de ambiente
+/backend/.env
+/frontend/.env
+
+# Ignorar pasta de dependências do Composer (backend)
+/backend/vendor/
+
+# Ignorar pasta de dependências do Node (frontend)
+/frontend/node_modules/
+
+# Ignorar builds do frontend
+/frontend/dist/
